// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expenses Summary should render correctly with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="container"
  >
    <h2
      className="page-header__title"
    >
      Showing 
      <span>
        1
      </span>
       
      expense 
      <span>
        totaling 
        $20.00
      </span>
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Expenses Summary should render correctly with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="container"
  >
    <h2
      className="page-header__title"
    >
      Showing 
      <span>
        5
      </span>
       
      expenses 
      <span>
        totaling 
        $100,000.00
      </span>
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Expenses Summary should render correctly with no expense 1`] = `
<div
  className="page-header"
>
  <div
    className="container"
  >
    <h2
      className="page-header__title"
    >
      Showing 
      <span>
        0
      </span>
       
      expense 
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
